<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluesea"
    tools:context=".approve_pass"
    android:padding="5dp">


    <LinearLayout
        android:id="@+id/ap_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:background="#5000"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chicle"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/selectPass"
            android:textColor="@color/orange_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ap_selPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/selectPass"
            android:textSize="24sp"
            android:inputType="text"
            android:singleLine="true"
            android:padding="8dp"
            android:paddingLeft="15dp"
            android:background="@drawable/textedit_back"
            app:drawableEndCompat="@drawable/ic_arrow_down" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ap_Header"
        app:layout_constraintBottom_toTopOf="@id/ap_buttonCover">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/vesselName"
                style="@style/pass_approve_label"/>
            <TextView
                android:id="@+id/ap_vesselName"
                android:text="@string/vesselName"
                style="@style/pass_approve_value"/>
            <TextView
                android:text="@string/pass_No"
                style="@style/pass_approve_label"/>

            <TextView
                android:id="@+id/ap_passNo"
                style="@style/pass_approve_value"
                android:text="@string/pass_No" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/pass_issued_on"
                        style="@style/pass_approve_label"/>
                    <TextView
                        android:id="@+id/ap_issDate"
                        android:text="@string/pass_issued_on"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/validitydate"
                        style="@style/pass_approve_label"/>
                    <TextView
                        android:id="@+id/ap_validityDt"
                        android:text="@string/validitydate"
                        style="@style/pass_approve_value"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="4">
                    <TextView
                        android:text="@string/diesel"
                        style="@style/pass_approve_label"/>
                    <TextView
                        android:id="@+id/ap_diesel"
                        android:text="@string/diesel"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="3">
                    <TextView
                        android:text="@string/life_bouys"
                        style="@style/pass_approve_label"/>
                    <EditText
                        android:id="@+id/ap_lifeBouys"
                        android:minWidth="80dp"
                        android:text="0"
                        android:inputType="number"
                        android:textAlignment="center"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="3">
                    <TextView
                        android:text="@string/life_jackets"
                        android:singleLine="true"
                        style="@style/pass_approve_label"/>
                    <EditText
                        android:id="@+id/ap_lifeJackets"
                        android:minWidth="80dp"
                        android:text="0"
                        android:inputType="number"
                        android:textAlignment="center"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/voyage_days"
                        style="@style/pass_approve_label"/>
                    <EditText
                        android:id="@+id/ap_voyageDays"
                        android:minWidth="100dp"
                        android:text="0"
                        android:textAlignment="center"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/pass_approve_split_layout"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/crew_count"
                        style="@style/pass_approve_label"/>
                    <TextView
                        android:id="@+id/ap_crewCount"
                        android:text="@string/crew_count"
                        style="@style/pass_approve_value"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:text="@string/voyage_status"
                style="@style/pass_approve_label"/>
            <TextView
                android:id="@+id/ap_voyageStatus"
                android:text="@string/voyage_status"
                style="@style/pass_approve_value"/>
            <TextView
                android:text="@string/pass_issued_by"
                style="@style/pass_approve_label"/>
            <TextView
                android:id="@+id/ap_passIssueUser"
                android:text="@string/pass_issued_by"
                style="@style/pass_approve_value"/>
            <TextView
                android:text="@string/remarks"
                style="@style/pass_approve_label"/>
            <EditText
                android:id="@+id/ap_remarks"
                android:text="@string/remarks"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:singleLine="false"
                style="@style/pass_approve_value"/>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_buttonCover"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/ap_btnApprove"
            android:text="@string/approve"
            style="@style/styleBtnGreen"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/ap_btnReject"
            android:text="@string/reject"
            style="@style/styleBtnRed"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>