<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/crw_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?MyStyleBlueTransperent"
                >

                <TextView
                    android:id="@+id/crw_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crewName"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/crw_aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aadhar"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crw_Name" />

                <CheckBox
                    android:id="@+id/crw_chk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toBottomOf="@id/crw_aadhar"
                    app:layout_constraintRight_toRightOf="@id/crw_aadhar"/>
                <TextView
                    android:id="@+id/crw_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:textSize="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crw_aadhar" />


            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>